syntax = "proto3";
package overlay;

option go_package = "github.com/autonomouskoi/trackstar/overlay"; 

enum BusTopic {
	TRACKSTAR_OVERLAY_EVENT   = 0;
    TRACKSTAR_OVERLAY_REQUEST = 1;
}

enum MessageType {
    UNSPECIFIED         = 0;
    CONFIG_UPDATED      = 1;
    SET_STYLE           = 2;
    GET_CONFIG_REQUEST  = 3;
    GET_CONFIG_RESPONSE = 4;
    SET_TRACK_COUNT     = 5;
    TRACK_COUNT_UPDATE  = 6;
    CONFIG_SET_REQ      = 7;
    CONFIG_SET_RESP     = 8;
}

message StyleUpdate {
    string  selector = 1;
    string  property = 2;
    string  value    = 3;
}

message Config {
    repeated  StyleUpdate  styles      = 1;
              uint32       track_count = 2;
              string       custom_css  = 3;
}

message GetConfigRequest { }

message GetConfigResponse {
    Config  config = 1;
}

message SetTrackCount {
    uint32  count = 1;
}

message TrackCountUpdate {
    uint32  count = 1;
}

message ConfigSetRequest {
    Config  config = 1;
}
message ConfigSetResponse {
    Config  config = 1;
}